--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.12.7",
+    "multer": "^1.4.2",
+    "pg": "^8.6.0",
     "query-to-mongo": "^0.10.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
