--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "query-to-mongo": "^0.10.1",
+    "sequelize": "^6.6.2",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.5.1",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7"
   }
