--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
+    "kill-port": "^1.6.1",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "query-to-mongo": "^0.10.1",
     "sequelize": "^6.6.2",
+    "sequelize-cockroachdb": "^6.0.0-beta.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
