updated config.js and mongo init files

--- a/.env
+++ b/.env
@@ -2,18 +2,18 @@
 PORT=5000
 
 #POSTGRES
-PGPORT=
-PGHOST=
-PGUSER=
-PGDATABASE=
-PGPASSWORD=
+PGPORT=26257
+PGHOST=free-tier5.gcp-europe-west1.cockroachlabs.cloud
+PGUSER=sean
+PGDATABASE=strive-252.defaultdb
+PGPASSWORD=LPeP3cJfQCH3M-O2
 
 # MONGO
-MDBUSER=
-MDBPASSWORD=
-MDBHOST=
-MDBDATABASE=
-MONGO_URI=
+MDBUSER=SKopsap
+MDBPASSWORD=12345678910
+MDBHOST=todo-app.hzn5c.mongodb.net
+MDBDATABASE=strive
+MONGO_URI=mongodb+srv://SKopsap:12345678910@todo-app.hzn5c.mongodb.net/strive?retryWrites=true&w=majority
 
 # CORS
 CORS_URL_PROD=
