quick update to git commit, added repo asset files

--- a/.env
+++ b/.env
@@ -2,11 +2,18 @@
 PORT=5000
 
 #POSTGRES
-PGPORT=26257
-PGHOST=free-tier5.gcp-europe-west1.cockroachlabs.cloud
-PGUSER=sean
-PGDATABASE=strive-252.defaultdb
-PGPASSWORD=LPeP3cJfQCH3M-O2
+PGPORT=5003
+PGHOST=localhost
+PGUSER=postgres
+PGDATABASE=strive-test
+PGPASSWORD=12345678910
+
+#COCKROACHDB
+CCPORT=26257
+CCHOST=free-tier5.gcp-europe-west1.cockroachlabs.cloud
+CCUSER=sean
+CCDATABASE=strive-252.defaultdb
+CCPASSWORD=LPeP3cJfQCH3M-O2
 
 # MONGO
 MDBUSER=SKopsap
