--- a/.env
+++ b/.env
@@ -2,25 +2,25 @@
 PORT=5000
 
 #POSTGRES
-PGPORT=5003
-PGHOST=localhost
-PGUSER=postgres
-PGDATABASE=strive-test
-PGPASSWORD=12345678910
+PGPORT=
+PGHOST=
+PGUSER=
+PGDATABASE=
+PGPASSWORD=
 
 #COCKROACHDB
-CCPORT=26257
-CCHOST=free-tier5.gcp-europe-west1.cockroachlabs.cloud
-CCUSER=sean
-CCDATABASE=strive-252.defaultdb
-CCPASSWORD=LPeP3cJfQCH3M-O2
+CCPORT=
+CCHOST=
+CCUSER=
+CCDATABASE=
+CCPASSWORD=
 
 # MONGO
-MDBUSER=SKopsap
-MDBPASSWORD=12345678910
-MDBHOST=todo-app.hzn5c.mongodb.net
-MDBDATABASE=strive
-MONGO_URI=mongodb+srv://SKopsap:12345678910@todo-app.hzn5c.mongodb.net/strive?retryWrites=true&w=majority
+MDBUSER=
+MDBPASSWORD=
+MDBHOST=
+MDBDATABASE=
+MONGO_URI=
 
 # CORS
 CORS_URL_PROD=
