--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "nodemon --exec mocha -R min",
-    "dev": "cross-env NODE_ENV=development nodemon -e js -r dotenv/config ./src/server.js",
-    "start": "cross-env NODE_ENV=production node ./src/server.js"
+    "dev": "cross-env NODE_ENV=development nodemon -e js -r dotenv/config src/index.js",
+    "start": "cross-env NODE_ENV=production node src/index.js"
   },
   "keywords": [],
   "author": "",
